--- a/MoqExpression/MoqExpression.csproj
+++ b/MoqExpression/MoqExpression.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Authors>Ovais Hanif</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>https://github.com/ovaishanif94/Moq.Expression/blob/master/LICENSE</PackageLicenseUrl>
+    <Copyright>Ovais Hanif 2019</Copyright>
+    <RepositoryUrl>https://github.com/ovaishanif94/Moq.Expression</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/ovaishanif94/Moq.Expression</PackageProjectUrl>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>SigningKey.pfx</AssemblyOriginatorKeyFile>
+    <Description>This package helps you to solve expression function in unit test moq framework.</Description>
+    <PackageTags>moqexpression, moqexpressionfunction, unittestexpressionfunction, moqexpressionmatch, nunittestexpression</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
